# spaced_repetition_tool

./: Cargo.toml  README.md
example_files/: eng_fr_verbs.txt  hex_dec_conversions.txt  learnables_elaborate.yaml
examples/: generate_binary.rs  generate_deck.rs  generate_from_text.rs  generate_hexadecimal.rs  generate_number_representation.rs  hosted.rs  tui.rs
examples/hosted/: example_config.yaml  main.rs
examples/hosted/www/: index.html  main.css  main.js
memorizer_core/: Cargo.toml
memorizer_core/examples/: generate_binary.rs
memorizer_core/src/: lib.rs  text.rs  traits.rs
src/: algorithm.rs  lib.rs  recorder.rs  text.rs  training.rs  traits.rs
