[package]
name = "memorizer"
version = "0.0.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
rand = "0.8.5"
rand_distr =  "0.4.3"

[dev-dependencies]
tui = "0.18.0"
crossterm = "0.23.2"
unicode-width = "0.1.9"
