[package]
name = "memorizer"
version = "0.0.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
rand = "0.8.5"
rand_distr =  "0.4.3"

[dev-dependencies]
tui = "0.18.0"
crossterm = "0.23.2"
unicode-width = "0.1.9"
clap = { version="4.5.21", features = ["derive"] }
md-5 = "0.10.1"

# Hosted version
serde_json = "1.0.94"
tiny_http = "0.12"
ascii = "1.1.0"
parking_lot = "0.12.3"
# clap


